[package]
name = "libp2p-test-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
asynchronous-codec = "0.6"
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }
futures = "0.3.28"
libp2p = { version = "0.51.3", features = ["async-std", "macros"] }
